fix collapse container max-width

--- a/src/app/pages/branch/checkout/checkout.component.scss
+++ b/src/app/pages/branch/checkout/checkout.component.scss
@@ -139,6 +139,7 @@
   top: 0;
   height: 100vh;
   width: 100%;
+  max-width: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
   z-index: 100;
@@ -151,6 +152,7 @@
   bottom: 0;
   padding: 20px;
   min-height: 40%;
+  max-width: 500px;
   width: 100%;
 }
 
