--- a/src/app/pages/branch/payment/payment.component.scss
+++ b/src/app/pages/branch/payment/payment.component.scss
@@ -46,6 +46,7 @@
   top: 0;
   height: 100vh;
   width: 100%;
+  max-width: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
   z-index: 100;
@@ -58,6 +59,7 @@
   bottom: 0;
   padding: 20px 16px;
   min-height: 40%;
+  max-width: 500px;
   width: 100%;
 }
 
