--- a/src/app/pages/branch/restaurant/restaurant.component.scss
+++ b/src/app/pages/branch/restaurant/restaurant.component.scss
@@ -110,6 +110,7 @@
   top: 0;
   height: 100vh;
   width: 100%;
+  max-width: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
   z-index: 100;
@@ -124,6 +125,7 @@
   bottom: 0;
   padding: 20px;
   min-height: 40%;
+  max-width: 500px;
   width: 100%;
 }
 
