--- a/src/app/pages/choose-contact/choose-contact.component.scss
+++ b/src/app/pages/choose-contact/choose-contact.component.scss
@@ -21,6 +21,7 @@
   top: 0;
   height: 100vh;
   width: 100%;
+  max-width: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
   z-index: 100;
@@ -33,6 +34,7 @@
   bottom: 0;
   padding: 20px;
   min-height: 40%;
+  max-width: 500px;
   width: 100%;
 }
 
