--- a/src/app/pages/location/location.component.scss
+++ b/src/app/pages/location/location.component.scss
@@ -75,6 +75,7 @@
   bottom: 0;
   height: 100%;
   width: 100%;
+  max-width: 500px;
   overflow: hidden;
   z-index: 1003;
 }
@@ -85,6 +86,7 @@
   top: 0;
   height: 100%;
   width: 100%;
+  max-width: 500px;
   z-index: 1001;
 }
 
@@ -95,6 +97,7 @@
   bottom: 0;
   padding: 20px;
   min-height: 40%;
+  max-width: 500px;
   width: 100%;
 }
 
